# shyfem

./: .gitignore  BUG  CHANGES  COMMIT  COPYING  Dockerfile  FAQ  LASTTAR  LGPL  LOG  Makefile  README  README.md  RELEASE_NOTES  Rules.make  TODO  VERSION  cp_fem.sh  meson.build  meson_options.txt  module.txt  paralution  param.h  pragma_directives.h.meson_input  prep_dirs.sh  prep_fem.sh
amgx-c-wrapper/: README_shyfem  meson.build
examples/: Makefile  apn_real.str  apn_salt.str  apn_velcolriver.str  apnbath.str  make_figs.sh  make_sims.sh  mm_hyd_00.str  mm_hyd_02.str  mm_hyd_03.str  mm_hyd_11.str  mm_hyd_12a.str  mm_hyd_12b.str  mm_hyd_21.str  mm_hyd_22.str  mm_hyd_22a.str  mm_hyd_31.str  mm_hyd_41.str  mm_hyd_43.str  run.sh
fem3d/: ACTUAL  BUG  COMMIT  LOG  MPI_todo  Makefile  Makefile.ww3  PETSC  TESTLOG  alukas.f  amgx_c_wrapper_dummy.f  aquabc.f  aquabc.h  aquabc_II.f90  aquabc_II.h  aquabc_II_aout.h  aquabc_II_apara.f  aquabc_II_ased_ini.f90  aquabc_II_co2sys.f90  aquabc_II_fem_interface.f  aquabc_II_ini.f90  aquabc_II_pelagic_lib.f90  aquabc_II_pelagic_model.f90  aquabc_II_sediment_lib.f90  aquabc_II_sediment_model_1.f90  aquabc_II_svindex.f90  aquabc_II_util.f  aquabc_aout.h  aquabc_fem_interface.f  aquabc_sediment_model_1.f  aquabc_util.f  area.h  atoxi.f  atoxi3d.f  aux_array.h  basbathy.f  basbox.f  baschk.f  bascomp.f  bashsigma.f  (+646 more)
femadj/: COMMIT  DIFFS  Makefile  TODO  VERSION  adj4el.f  adj575.f  adj5el.f  adj7el.f  adjele.f  adjgrd.f  adjneu.f  adjplo.f  adjvar.f  basin.h  mod_adj_grade.f  nbstatic.h  param.h  shyadj.f  subfil.f  subgeo.f  subgrd.f  subgrd.h  subscn.f  subsrt.f  subssg.f  subsss.f  subssv.f
femanim/: Makefile  makeanim.sh  rename-petras.pl  rename.pl
fembfm/: BFM0D.F90  README  bfm_compile.sh  bfm_insert.pl
fembin/: .fempub.sh.swp  2nc  Makefile  Update  add_date.pl  apnmake  ascii.sh  atime.pl  autoconfig  aver  average  average.pl  background.pl  background.sh  basbathy  bashskel.sh  bashutil.sh  basinf  bastreat  bathy.pl  bline.pl  boundbox  check_debug.sh  clean_symbolic_links.sh  clean_sync_dt.pl  clean_time  clean_time.f  cleansim.sh  clo.sh  cmv.sh  coast.pl  convert_date.pl  convert_time_column.pl  copy_shyfem.sh  copyto  cvs-format-update.pl  cvsrecreate  cvsstatus  cvstag  d+.pl  (+246 more)
femcheck/: HOWTO_GIT  INFO_INSTALL  INSTALL-LIST  Makefile  README  Rules.dist  bashrc.ggu  bashrc.skel  check_compilation.sh  check_compiler.sh  check_install.sh  check_setup.sh  check_software.sh  check_var.sh  configure.pl  configure.sh  copyright_notice.txt  femdir.sh  find_changed.sh  find_routines.sh  hw.c  hw.f  identify_compiler.sh  install-all.sh  install.sh  profile  profile.ggu  profile.skel  set_netcdf.sh  test_compile.sh  test_stable.sh
femdoc/: 3d_layers.tex  GridGeneration.txt  HowtoInstall.txt  INFO_LAGRANGE  INFO_LOG  INFO_develop  LAGRANGE  LOG  Makefile  ModelApplication.txt  PostProcessing.txt  README  Release_notes_7.0.tex  Release_notes_7.0v2.tex  Release_notes_7.0v3.tex  Release_notes_7.1v1.tex  Roadmap_Shyfem.tex  abbrev.bib  barocl.tex  basic.str  basic_minimal.tex  basic_usage.tex  bathy_interp.tex  bio3d.tex  bio3d_st.tex  bio3d_t.tex  bound_cond.tex  compatibility.tex  compilation.tex  creating_mesh.tex  data_requirement.txt  disclaimer.tex  discret.tex  download.tex  equat.tex  example.str  fem3d.tex  femdoc.pl  femdoc.sh  git.tex  (+37 more)
femdummy/: Makefile
femersem/: BUGS  CHANGES  Makefile  README  TODO  bfm_env.csh
femgotm/: Makefile  Makefile.1  Makefile.2  README  algebraiclength.F90  alpha_mnb.F90  cmue_a.F90  cmue_b.F90  cmue_c.F90  cmue_d.F90  cmue_ma.F90  cmue_rf.F90  cmue_sg.F90  compute_cpsi3.F90  compute_rist.F90  cppdefs.h  diff_face.F90  dissipationeq.F90  epsbalgebraic.F90  eqstate.F90  fem_gotm_interface.F90  fk_craig.F90  genericeq.F90  gotm_lib_version.F90  gotmturb.nml  internal_wave.F90  ispralength.F90  kbalgebraic.F90  kbeq.F90  kpp.F90  lengthscaleeq.F90  meson.build  potentialml.F90  production.F90  q2over2eq.F90  r_ratio.F90  tkealgebraic.F90  tkeeq.F90  tridiagonal.F90  turbulence.F90  (+3 more)
femlib/: Makefile
fempara/: Makefile  Makefile.src  README  change_para.sh  log_info.pl  para_get.sh  para_setup.sh
femplot/: COMMIT  DIFFS  Makefile  VERSION  aux_array.h  basin.h  col.f  color.h  colortb.f  colutils.f  depth.h  ev.h  evmain.h  hydro.h  hydro_plot.h  hydro_print.h  lagxitest.f  legend.h  levels.h  line_nodes.f  mkonst.h  mod_hydro_plot.f  mod_plot2d.f  mod_plot3d.f  ousinfo.f  param.h  pkonst.h  plot_aux.h  plot_aux_3d.h  plotbug.f  plotcolb.f  plotsim.f  plotutil.f  prep_femplot.sh  reg2fem.f  sbscan.f  section.txt  shyplot.f  simul.h  subrgf.f  (+23 more)
femregres/: Makefile  README  regdiff.sh  regress.sh
femspline/: Makefile  README  circle.f  gauss.f  gridr.f  hash.f  param_dummy.h  pkonst.h  sgauss.f  smooth.f  sss.f  subfil.f  subgrd.f  subrnd.f  subscn.f  subsss.f  subver.f  test.pl  triint.f  tsmooth.f  ven.f
femutil/: Makefile
grid/: BUGS  COMMIT  INFORMAT  Makefile  after.sh  args.c  args.h  assert.c  assert.h  color.c  color.h  debug.c  debug.h  event.c  event32.c  eventque.h  events.c  events.h  evtest.c  fund.h  general.c  general.h  generalx.h  gevents.c  ggraph.c  gkeybd.c  gmouse.c  graph.c  graph.h  grid.c  grid.h  grid_df.h  grid_ex.h  grid_fp.h  grid_ty.h  gridbu.c  gridco.c  gridfi.c  gridge.c  gridhs.c  (+50 more)
hcbs/: Makefile  general.c  general.h  generalx.h  graph.h  gustd.c  gustd.h  tvis.f  xgraph.c  xgraph.h  (+2 more)
tests_meson/: AmgX.info  EXPLICIT.0001.str  EXPLICIT.0002.str  IMPLICIT.0001.str  IMPLICIT.0002.str  IMPLICIT_PETSc_AMGX.0001.str  IMPLICIT_PETSc_AMGX.0002.str  IMPLICIT_PETSc_CPU.0001.str  IMPLICIT_PETSc_CPU.0002.str  IMPLICIT_PETSc_GPU.0001.str  PETSc_AMGX.0001.petscrc  PETSc_AMGX.0002.petscrc  PETSc_CPU.0001.petscrc  PETSc_CPU.0002.petscrc  PETSc_GPU.0001.petscrc  compare_floats.awk  create_basin.sh  mesh.grd  meson.build  run_and_check_success.sh  run_and_diff.sh  synch.sh  test_zeta.0001.EXPLICIT_0001  test_zeta.0001.IMPLICIT_0001  test_zeta.0002.EXPLICIT_0001  test_zeta.0002.EXPLICIT_0002  test_zeta.0002.IMPLICIT_0001  test_zeta.0002.IMPLICIT_0002  wind.txt
(+2199 files in other folders)
