option('use_PETSc',type:'boolean',value:false)
option('use_AmgX',type:'boolean',value:false)
option('use_SPK',type:'boolean',value:false)
option('use_MPI',type:'boolean',value:false)
option('use_paradiso',type:'boolean',value:false)
option('test_zeta',type:'boolean',value:false)
option('Verbose',type:'boolean',value:false)
option('num_GPU',type:'integer',min:0,max:2,value:0,description : 'number of GPUs available for integration tests (one GPU per MPI proc)')
option('path_petsc', type : 'string', value : 'none', description : 'path to PETSc installation folder')
option('path_amgx', type : 'string', value : 'none', description : 'path to the installation folder of the AmgX solver')
option('path_amgxwrapper', type : 'string', value : 'none', description : 'path to the installation folder of AmgXWrapper, the c++ wrapper between PETSc and the AmgX solver')
option('path_metis', type : 'string', value : 'none', description : 'path to METIS installation folder')
option('path_cuda', type : 'string', value : 'none', description : 'path to CUDA installation folder')
